--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,6 +8,13 @@
   <mat-drawer-content class="p-6">
     <app-products-header (columnsCountChange)="onColumnsCountChange($event)">
     </app-products-header>
-    {{ category }}
+    <mat-grid-list gutterSize="16" [cols]="plpColumns" [rowHeight]="rowHeight">
+      <mat-grid-tile>
+        <app-product-tile
+          class="w-full"
+          [fullWidthMode]="plpColumns === 1"
+        ></app-product-tile>
+      </mat-grid-tile>
+    </mat-grid-list>
   </mat-drawer-content>
 </mat-drawer-container>
