--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -57,12 +57,22 @@
     <!-- ACTION -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>
-        <button mat-raised-button color="warn" class="float-right">
+        <button
+          (click)="onClearCart()"
+          mat-raised-button
+          color="warn"
+          class="float-right"
+        >
           Clear cart
         </button>
       </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="black" class="float-right shadow-none">
+        <button
+          (click)="clearProductRow(element)"
+          mat-mini-fab
+          color="black"
+          class="float-right shadow-none"
+        >
           <mat-icon>close</mat-icon>
         </button>
       </td>
@@ -78,9 +88,10 @@
     <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
   </table>
 </mat-card>
-<mat-card *ngIf="!cart.items.length" class="mx-auto">
-  <p>
-    Your cart is empty
-    <button mat-raised-button routerLink="/home">Start shopping</button>
-  </p>
+<mat-card
+  *ngIf="!cart.items.length"
+  class="flex flex-col items-center justify-center w-full h-full text-center"
+>
+  <p class="mb-6">Your cart is empty</p>
+  <button mat-raised-button routerLink="/home">Start shopping</button>
 </mat-card>
