--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -30,11 +30,11 @@
     <ng-container matColumnDef="quantity">
       <th mat-header-cell *matHeaderCellDef>Quantity</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button>
+        <button mat-icon-button (click)="onRemoveQuantity(element)">
           <mat-icon class="text-md">remove</mat-icon>
         </button>
         <span class="px-2">{{ element.quantity }}</span>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="onAddQuantity(element)">
           <mat-icon class="text-md">add</mat-icon>
         </button>
       </td>
