--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,11 @@
     <app-filters (showCategory)="onShowCategory($event)"></app-filters>
   </mat-drawer>
   <mat-drawer-content class="p-6">
-    <app-products-header (columnsCountChange)="onColumnsCountChange($event)">
+    <app-products-header
+      (columnsCountChange)="onColumnsCountChange($event)"
+      (itemsCountChange)="onItemsCountChange($event)"
+      (itemsSortChange)="onItemsSortChange($event)"
+    >
     </app-products-header>
     <mat-grid-list gutterSize="16" [cols]="plpColumns" [rowHeight]="rowHeight">
       <mat-grid-tile *ngFor="let product of products">
