--- a/src/app/pages/home/components/filters/filters.component.html
+++ b/src/app/pages/home/components/filters/filters.component.html
@@ -4,7 +4,9 @@
   </mat-expansion-panel-header>
   <mat-selection-list [multiple]="false">
     <mat-list-option *ngFor="let category of categories" [value]="category">
-      <button (click)="onShowCategory(category)">{{ category }}</button>
+      <button (click)="onShowCategory(category)">
+        {{ category | titlecase }}
+      </button>
     </mat-list-option>
   </mat-selection-list>
 </mat-expansion-panel>
